--- a/blogok/templates/post_detail.html
+++ b/blogok/templates/post_detail.html
@@ -8,7 +8,7 @@
               <small class="text-muted">{{ post.date_posted }}</small>
             </div>
             <h2 class="article-title" >{{ post.title }}</h2>
-            <img src="{{ post.image.url }}" alt="" width="600">
+            <img src="{{ post.image.url }}" alt="" width="300" height="300">
             <p class="article-content mt-4">{{ post.content }}</p>
           </div>
         </article>
