--- a/blogok/templates/user_posts.html
+++ b/blogok/templates/user_posts.html
@@ -10,7 +10,7 @@
               <small class="text-muted">{{ post.date_posted }}</small>
             </div>
             <h2><a class="article-title" href="{% url 'post_detail' post.id %}">{{ post.title }}</a></h2>
-            <img src="{{ post.image.url }}" width="600" class="img-thumbnail" alt="">
+            <img src="{{ post.image.url }}" width="300" height="300" class="img-thumbnail" alt="">
             <p class="article-content mt-4">{{ post.content }}</p>
             <div class="form-group">
               <a href="{% url 'post_update' post.id %}" class="btn btn-outline-secondary">Update</button>
